required knex instance in db.js to connect to DB; set up express and required routers for project and installed knex

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "json-server": "^0.16.3",
+    "knex": "^0.95.2",
     "postgrator-cli": "^3.2.0",
     "xss": "^1.0.8"
   }
